# scrapy-tor-playwright-demo

./: .gitignore  manage.ps1  pyproject.toml  readme.rst
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: full-development.yml  full-production.yml  full-staging.yml  reusable-full.yml
doc/: conf.py  index.rst
doc/api/: commons.rst  items.rst  middlewares.rst  pipelines.rst  spiders.rst
doc/usecases/: scrapy_tor_playwright_demo.rst
src/: __init__.py  main.py  scrapy.cfg
src/scrapy_tor_playwright_demo/: defs.py  settings.py
src/scrapy_tor_playwright_demo/items/: __init__.py  defs.py  items.py  parsers.py
src/scrapy_tor_playwright_demo/middlewares/: __init__.py  defs.py  middlewares.py
src/scrapy_tor_playwright_demo/pipelines/: __init__.py  defs.py  pipelines.py
src/scrapy_tor_playwright_demo/spiders/: __init__.py  defs.py  spiders.py
tests/: __init__.py  conftest.py  fixtures.py  test_quotes_parser.py
tests/assets/quotes/: author_page_nojs.html  first_page_js.html  last_page_js.html  last_page_nojs.html  second_page_js.html  second_page_nojs.html
